<resources>
    <string name="app_name">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Welcome_message"><![CDATA[Welcome <name_user>]]></string>
    <string name="user_name"><![CDATA[<User_name User_last_name>]]></string>
    <string name="user_identification"><![CDATA[<User_Identification>]]></string>
    <string name="user_email"><![CDATA[<User_email>]]></string>
    <string name="LogOut">Cerrar sesión</string>
    <string name="uid_user"><![CDATA[<uid_user>]]></string>
</resources>