<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome_msj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="25sp"
        tools:text="@string/Welcome_message" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:background="?android:selectableItemBackgroundBorderless"
        android:layout_marginTop="20dp"
        android:focusable="true">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <ImageView
               android:id="@+id/img_user"
               android:layout_width="70dp"
               android:layout_height="match_parent"
               android:layout_marginLeft="10dp"
               android:layout_marginRight="10dp"
               android:scaleType="centerCrop"
               android:src="@drawable/ic_user" />
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

              <TextView
                  android:id="@+id/name_user"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:singleLine="true"
                  android:text="@string/user_name" />

              <TextView
                  android:id="@+id/user_uid"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:singleLine="true"
                  android:text="@string/uid_user" />

              <TextView
                  android:id="@+id/username_user"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:singleLine="true"
                  android:text="@string/user_identification" />

              <TextView
                  android:id="@+id/email_user"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:singleLine="true"
                  android:text="@string/user_email" />
          </LinearLayout>
       </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/LogOut"/>

</LinearLayout>